# HampPoliceDataEDA

./: .dockerignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml
src/: bronze.py  config.py  gold.py  ingest.py  silver.py
