[project]
name = "police-data-proj"
version = "1.0.0"
description = "UK Police Crime Data Pipeline — cleans and analyses Hampshire Constabulary crime data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark>=3.5.5",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
